# Coding-Assistant

CodingAssistant/: pyproject.toml  requirements.txt
CodingAssistant/src/codingassistant/: MainFile.py  __init__.py  testcode.py
CodingAssistant/src/codingassistant/Documentation/: Association in C#.docx  AssociationInCSharp.docx  ConstructorChainingInCSharp.docx  LatheVMMillingMachine.docx  string methods.docx
CodingAssistant/src/codingassistant/GeneratedCode/cpp/: add_integers.cpp
CodingAssistant/src/codingassistant/GeneratedCode/html/: index.html
CodingAssistant/src/codingassistant/GeneratedCode/javascript/: Ali.js
CodingAssistant/src/codingassistant/GeneratedCode/python/: Ali.py
